--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous" />
         <link rel="stylesheet" type="text/css" href="benchmarking.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            .gif-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            }
+            .row {
+                display: flex;
+                justify-content: center;
+                margin: 10px 0;
+            }
+            .gif-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 0 10px;
+                text-align: center;
+            }
+            .gif-item img {
+                width: 400px; /* Adjust the width as needed */
+                height: auto; /* Maintain aspect ratio */
+            }
+        </style>
     </head>
 
     <body data-new-gr-c-s-check-loaded="14.1100.0" data-gr-ext-installed="" cz-shortcut-listen="true">
@@ -47,6 +73,32 @@
                             </div>
                         </div>                        
                         <div class="col-sm-2"></div>
+                        <div class="gif-container">
+                            <div class="row">
+                                <div class="gif-item">
+                                    <h3 style="color: rgb(29, 178, 228);">Interpretability</h3>
+                                    <img src="static/gifs/toddler_interpretability_gif.gif" alt="GIF 1">
+                                </div>
+                                <div class="gif-item">
+                                    <h3 style="color: gray;">Sketch-based Editing 1</h3>
+                                    <img src="static/gifs/toddler_controlability_sketch_gif_1.gif" alt="GIF 2">
+                                </div>
+                                <div class="gif-item">
+                                    <h3 style="color: gray;">Sketch-based Editing 2</h3>
+                                    <img src="static/gifs/toddler_controlability_sketch_gif_2.gif" alt="GIF 3">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="gif-item">
+                                    <h3 style="color: rgb(2, 157, 2);">Palette-based Editing 1</h3>
+                                    <img src="static/gifs/toddler_controlability_palette_gif_1.gif" alt="GIF 5">
+                                </div>
+                                <div class="gif-item">
+                                    <h3 style="color: rgb(2, 157, 2);">Palette-based Editing 1</h3>
+                                    <img src="static/gifs/toddler_controlability_palette_gif_2.gif" alt="GIF 4">
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-sm-8">
                             <strong>Abstract</strong>
                             <hr>
